--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,11 @@
 name: NKhome
 main: be.noki_senpai.NKhome.NKhome
-version: 1.3.1
+version: 1.3.2
 api-version: 1.14
 author: 'NoKi_senpai'
 description: 'Allows players to have homes'
 website: www.lumen.ovh
+softdepend: [NKeconomy]
 commands:
   home:
     description: "Teleport to specified home"
