--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,11 @@
 name: NKhome
 main: be.noki_senpai.NKhome.NKhome
-version: 1.3.5
+version: 1.3.6
 api-version: 1.14
 author: 'NoKi_senpai'
 description: 'Allows players to have homes'
 website: www.lumen.ovh
+depend: [NKmanager]
 softdepend: [NKeconomy]
 commands:
   home:
